# nvsmask3d

./: .gitignore  .gitmodules  README.md  automation.py  automation_one.py  check.sh  check_depthmap.py  eval.sh  eval_debug.sh  eval_inrow.sh  eval_instance.yml  eval_parallel.sh  eval_test.sh  existed_scenes.txt  for_hanlin.py  left_scenens.py  nvs_sem_val_sub.txt  nvs_sub_val.txt  one_scene.txt  one_scene_.txt  output.txt  process_instance.py  pyproject.toml  requirements.txt  run.sh  test.py  test_depth.py  test_sam.ipynb  transfer.sh  viewer.sh  viz_mesh.py
assets/: README_to_be_cleaned.md
cluster/: update_yml.py
cluster/mahti/: run.sh
cluster/puhti/: run.sh
nvsmask3d/: __init__.py  automation.py  automation_test.py  nvsmask3d_config.py  nvsmask3d_datamanager.py  nvsmask3d_field.py  nvsmask3d_model copy.py  nvsmask3d_model.py  nvsmask3d_pipeline.py  nvsmask3d_run_viewer.py  run_sequence.sh  run_sequence_scannet.sh
nvsmask3d/config/: eval_instance_cam0.yml  eval_instance_cam1.yml  eval_instance_cam2.yml  eval_instance_cam3.yml
nvsmask3d/data/: scene_example
nvsmask3d/dataparsers/: blender_dataparser.py  dn_splatter_scannetpp.py  replica_dataparser.py  replica_nvsmasked_form_dataparser.py  scannet_dataparser.py  scannet_dataparser_own.py  scannet_dataparser_own_debug.py  scannetpp_dataparser.py  scannetpp_dataparser_dslr.py
nvsmask3d/encoders/: clip_encoder.py  image_encoder.py  open_clip_encoder.py  sam_encoder.py  visualization.py
nvsmask3d/eval/replica/: eval_semantic_instance.py  util.py  util_3d_original.py
nvsmask3d/eval/scannet200/: eval_semantic_instance copy.py  eval_semantic_instance.py  scannet_constants.py  util.py  util_3d.py
nvsmask3d/eval/scannetpp/: eval_semantic_instance.py
nvsmask3d/script/: eval_all.py  eval_config.py  eval_config_scannetpp.py  eval_config_scannetpp_inrow.py  eval_config_scannetpp_test.py  eval_scannetpp.py  eval_scannetpp_config.py  eval_scannetpp_config_run.py  eval_scannetpp_test.py  nvsmask3d_eval.py  nvsmask3d_eval_debug.py  nvsmask3d_eval_old.py  nvsmask3d_eval_scannetpp.py  nvsmask3d_eval_scannetpp_inrow.py  nvsmask3d_eval_scannetpp_test.py  nvsmask3d_eval_single.py  nvsmask3d_eval_single_consistent.py  nvsmask3d_eval_single_test.py  nvsmask3d_run_viewer.py  prompt_selection_eval.py
nvsmask3d/utils/: camera_utils.py  knn.py  normal_utils.py  test.py  utils.py
