[project]
name = "nvsmask3d"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["nvsmask3d*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
method-template = 'nvsmask3d.nvsmask3d_config:NvsMask3d'
custom-dataparser = 'nvsmask3d.nvsmask3d_config:ScanNetDataparser'


