[project]
name = "nvsmask3d"
description = "TODO"
version = "0.1.0"

dependencies = ["nerfstudio >= 1.1.3",
                "open-clip-torch",
                "natsort",
                "black == 22.3.0",] 

[tool.setuptools.packages.find]
include = ["nvsmask3d*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nvsmask3d = 'nvsmask3d.nvsmask3d_config:NvsMask3d'

[project.entry-points.'nerfstudio.dataparser_configs']
scannet = 'nvsmask3d:ScanNetDataParserSpecification'
replica = 'nvsmask3d:ReplicaDataParserSpecification'
replica_nvsmask3d = 'nvsmask3d:ReplicaNvsmask3DParserSpecification'
scannetpp_nvsmask3d = 'nvsmask3d:ScanNetppNvsmask3DParserSpecification'

[project.scripts]
# export viewer scripts
ns-viewer = "nvsmask3d.script.nvsmask3d_run_viewer:entrypoint"
ns-eval = "nvsmask3d.script.nvsmask3d_eval:entrypoint"